--- a/sner/server/templates/scheduler/job/list.html
+++ b/sner/server/templates/scheduler/job/list.html
@@ -4,7 +4,7 @@
 <div class="jobs">
 	<h1>Jobs list <a class="btn btn-xs btn-default" href="{{ url_for('scheduler.job_assign_route') }}"> Assign</a></h1>
 
-	<table id="jobs_table" class="datatable table table-hover table-responsive">
+	<table id="jobs_table" class="datatable_static table table-hover table-responsive">
 	<thead>
 		<tr>
 			<th>id</th>
