--- a/sner/server/templates/scheduler/task/list.html
+++ b/sner/server/templates/scheduler/task/list.html
@@ -4,7 +4,7 @@
 <div class="tasks">
 	<h1>Tasks list <a class="btn btn-xs btn-success" href="{{ url_for('scheduler.task_add_route') }}"><span class="glyphicon glyphicon-plus"></span> Add</a></h1>
 
-	<table id="tasks_table" class="datatable table table-hover table-responsive">
+	<table id="tasks_table" class="datatable_static table table-hover table-responsive">
 	<thead>
 		<tr>
 			<th>id</th>
