--- a/sner/server/templates/storage/service/vizports.html
+++ b/sner/server/templates/storage/service/vizports.html
@@ -2,14 +2,14 @@
 
 {% block script %}
 <script type="text/javascript">
-$(document).ready(function() {
-	$('.portmap_item').on('mouseenter', function() {
-		$.ajax({
-			url: "{{ url_for('storage.service_portstat_route', port='REPLACE') }}".replace('REPLACE', $(this).attr('data-port')),
-			success: function (data, status, jqXHR) { $('#port_detail').html(data);	}
+	$(document).ready(function() {
+		$('.portmap_item').on('mouseenter', function() {
+			$.ajax({
+				url: "{{ url_for('storage.service_portstat_route', port='REPLACE') }}".replace('REPLACE', $(this).attr('data-port')),
+				success: function (data, status, jqXHR) { $('#port_detail').html(data);	}
+			});
 		});
 	});
-});
 </script> 
 {% endblock %}
 
@@ -23,7 +23,6 @@ $(document).ready(function() {
 	{% endfor %}
 	</div>
 
-	<div id="port_detail" class="col-md-4">
-	</div>
+	<div id="port_detail" class="col-md-4"></div>
 </div>
 {% endblock %}
