--- a/sner/server/templates/storage/host/vizdns.html
+++ b/sner/server/templates/storage/host/vizdns.html
@@ -16,7 +16,7 @@ svg {
 {% endblock %}
 
 {% block script %}
-<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="{{ url_for('static', filename='d3/d3.min.js') }}"></script>
 {% endblock %}
 
 {% block content %}
