storage: keep created/modified attributes in the objects (will be used during long-term runs) but hide them for the time being from the ui

--- a/sner/server/templates/storage/service/list.html
+++ b/sner/server/templates/storage/service/list.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
 	var datatable_ajax_custom = {
 		"ajax": {"url": "{{ url_for('storage.service_list_json_route', **request.args) }}", "method": "POST"},
-		"columns": columns_with_buttons(["id", "host", "proto", "port", "name", "state", "info", "created", "modified"])
+		"columns": columns_with_buttons(["id", "host", "proto", "port", "name", "state", "info"])
 	};
 </script>
 {% endblock %}
