--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
 	var datatable_ajax_custom = {
 		"ajax": {"url": "{{ url_for('storage.host_list_json_route') }}", "method": "POST"},
-		"columns": columns_with_buttons(["id", "address", "hostname", "os", "count_services", "count_notes", "created", "modified"])
+		"columns": columns_with_buttons(["id", "address", "hostname", "os", "count_services", "count_notes"])
 	};
 </script>
 {% endblock %}
