--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -38,7 +38,7 @@
 			<script type="text/javascript">
 				var datatable_host_services = {
 					"ajax": {"url": "{{ url_for('storage.service_list_json_route', host_id=host.id) }}", "method": "POST"},
-					"columns": columns_with_buttons(["id", "proto", "port", "name", "state", "info", "created", "modified"]),
+					"columns": columns_with_buttons(["id", "proto", "port", "name", "state", "info"]),
 				};
 				$(document).ready(function() {
 					$('#datatable_host_services').DataTable($.extend({}, datatable_ajax_options, datatable_host_services));
@@ -51,7 +51,7 @@
 			<script type="text/javascript">
 				var datatable_host_notes = {
 					"ajax": {"url": "{{ url_for('storage.note_list_json_route', host_id=host.id) }}", "method": "POST"},
-					"columns": columns_with_buttons(["id", "ntype", "data", "created", "modified"]),
+					"columns": columns_with_buttons(["id", "ntype", "data"]),
 				};
 				$(document).ready(function() {
 					$('#datatable_host_notes').DataTable($.extend({}, datatable_ajax_options, datatable_host_notes));
