--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
 	var datatable_ajax_custom = {
 		"ajax": {"url": "{{ url_for('storage.note_list_json_route') }}", "method": "POST"},
-		"columns": columns_with_buttons(["id", "host", "ntype", "data", "created", "modified"])
+		"columns": columns_with_buttons(["id", "host", "ntype", "data"])
 	};
 </script>
 {% endblock %}
