--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -30,7 +30,7 @@
 	<script type="text/javascript">
 		// datatables columns api helper
 		function columns_with_buttons(cols) {
-			return cols.map(function(d) {return {"name": d, "title": d, "data": d, "render": $.fn.dataTable.render.text()};})
+			return cols.map(function(d) { return (d instanceof Object) ? d : {"name": d, "title": d, "data": d, "render": $.fn.dataTable.render.text()};})
 				.concat({"name": "_buttons", "title": "_buttons", "data": "_buttons", "render": null, "orderable": false});
 		}
 
