--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -2,9 +2,14 @@
 
 {% block script %}
 <script type="text/javascript">
+	var address_render = function (data, type, row, meta) {
+		return "<a href='{{ url_for('storage.host_view_route', host_id='REPLACE_ID') }}'>REPLACE_ADDRESS</a>"
+			.replace("REPLACE_ID", row.id)
+			.replace("REPLACE_ADDRESS", row.address);
+	};
 	var datatable_ajax_custom = {
 		"ajax": {"url": "{{ url_for('storage.host_list_json_route') }}", "method": "POST"},
-		"columns": columns_with_buttons(["id", "address", "hostname", "os", "count_services", "count_notes"])
+		"columns": columns_with_buttons(["id", {"name": "address", "title": "address", "data": "address", "render": address_render}, "hostname", "os", "count_services", "count_notes"])
 	};
 </script>
 {% endblock %}
