--- a/sner/server/templates/storage/service/addedit.html
+++ b/sner/server/templates/storage/service/addedit.html
@@ -7,6 +7,10 @@
 
 	<form class="form-horizontal" action="{{ form_url }}" method="post">
 		{{ form.csrf_token }}
+		<div class="form-group">
+			<label class="col-sm-2 control-label">Host</label>
+			<div class="col-sm-10"><p class="form-control-static">{{ host }}</p></div>
+		</div>
 		{{ b_wtf.bootstrap_field(form.host_id, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.proto, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.port, horizontal=True) }}
