--- a/sner/server/templates/storage/service/pagepart-controls.html
+++ b/sner/server/templates/storage/service/pagepart-controls.html
@@ -1,2 +1,2 @@
 <a class="btn btn-xs btn-primary" href="{{ url_for('storage.service_edit_route', service_id=service.id) }}"><span class="glyphicon glyphicon-edit"></span> Edit</a>
-{% with form=generic_button_form, form_url=url_for('storage.service_delete_route', service_id=service.id) %}{% include 'button-delete.html' %}{% endwith %}
+{% with form=button_form, form_url=url_for('storage.service_delete_route', service_id=service.id) %}{% include 'button-delete.html' %}{% endwith %}
