storage: condensed datatables saves space

--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -18,6 +18,6 @@
 <div class="hosts">
 	<h1>Hosts list <a class="btn btn-xs btn-success" href="{{ url_for('storage.host_add_route') }}"><span class="glyphicon glyphicon-plus"></span> Add</a></h1>
 
-	<table id="hosts_table" class="datatable_ajax table table-hover table-responsive"></table>
+	<table id="hosts_table" class="datatable_ajax table table-hover table-responsive table-condensed"></table>
 </div>
 {% endblock %}
