--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -20,6 +20,6 @@
 <div class="notes">
 	<h1>Notes list</h1>
 
-	<table id="notes_table" class="datatable_ajax table table-hover table-responsive"></table>
+	<table id="notes_table" class="datatable_ajax table table-hover table-responsive table-condensed"></table>
 </div>
 {% endblock %}
