--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -34,7 +34,7 @@
 	<div class="tab-content">
 		<div role="tabpanel" class="tab-pane" id="services">
 
-			<table id="datatable_host_services" class="table table-hover table-responsive" width="100%"></table>
+			<table id="datatable_host_services" class="table table-hover table-responsive table-condensed" width="100%"></table>
 			<script type="text/javascript">
 				var datatable_host_services = {
 					"ajax": {"url": "{{ url_for('storage.service_list_json_route', host_id=host.id) }}", "method": "POST"},
@@ -47,7 +47,7 @@
 		</div>
 
 		<div role="tabpanel" class="tab-pane" id="notes">
-			<table id="datatable_host_notes" class="table table-hover table-responsive" width="100%"></table>
+			<table id="datatable_host_notes" class="table table-hover table-responsive table-condensed" width="100%"></table>
 			<script type="text/javascript">
 				var datatable_host_notes = {
 					"ajax": {"url": "{{ url_for('storage.note_list_json_route', host_id=host.id) }}", "method": "POST"},
