--- a/sner/server/templates/storage/host/addedit.html
+++ b/sner/server/templates/storage/host/addedit.html
@@ -10,6 +10,7 @@
 		{{ b_wtf.bootstrap_field(form.address, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.hostname, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.os, horizontal=True) }}
+		{{ b_wtf.bootstrap_field(form.comment, horizontal=True) }}
 		<div class="form-group">
 			<label class="col-sm-2 control-label"></label>
 			<div class="col-sm-10"><button class="btn-default btn" type="submit">Save</button></div>
