--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -19,9 +19,10 @@
 
 	<div>
 		<dl class="dl-horizontal">
-		<dt>os</dt><dd>{{host.os}}</dd>
-		<dt>created</dt><dd>{{host.created|datetime}}</dd>
-		<dt>modified</dt><dd>{{host.modified|datetime}}</dd>
+		<dt>os</dt><dd>{{ host.os }}</dd>
+		<dt>comment</dt><dd>{{ host.comment }}</dd>
+		<dt>created</dt><dd>{{ host.created|datetime }}</dd>
+		<dt>modified</dt><dd>{{ host.modified|datetime }}</dd>
 		</dl>
 	</div>
 
@@ -38,7 +39,7 @@
 			<script type="text/javascript">
 				var datatable_host_services = {
 					"ajax": {"url": "{{ url_for('storage.service_list_json_route', host_id=host.id) }}", "method": "POST"},
-					"columns": columns_with_buttons(["id", "proto", "port", "name", "state", "info"]),
+					"columns": columns_with_buttons(["id", "proto", "port", "name", "state", "info", "comment"]),
 				};
 				$(document).ready(function() {
 					$('#datatable_host_services').DataTable($.extend({}, datatable_ajax_options, datatable_host_services));
@@ -51,7 +52,7 @@
 			<script type="text/javascript">
 				var datatable_host_notes = {
 					"ajax": {"url": "{{ url_for('storage.note_list_json_route', host_id=host.id) }}", "method": "POST"},
-					"columns": columns_with_buttons(["id", "ntype", "data"]),
+					"columns": columns_with_buttons(["id", "ntype", "data", "comment"]),
 				};
 				$(document).ready(function() {
 					$('#datatable_host_notes').DataTable($.extend({}, datatable_ajax_options, datatable_host_notes));
