--- a/sner/server/templates/storage/note/addedit.html
+++ b/sner/server/templates/storage/note/addedit.html
@@ -15,8 +15,9 @@
 		{{ b_wtf.bootstrap_field(form.ntype, horizontal=True) }}
 		<div class="form-group">
 			{{ form.data.label(class="col-sm-2 control-label") }}
-			<div class="col-sm-10">{{ form.data(class="form-control", rows="30")|safe }}</div>
+			<div class="col-sm-10">{{ form.data(class="form-control", rows="20")|safe }}</div>
 		</div>
+		{{ b_wtf.bootstrap_field(form.comment, horizontal=True) }}
 		<div class="form-group">
 			<label class="col-sm-2 control-label"></label>
 			<div class="col-sm-10"><button class="btn-default btn" type="submit">Save</button></div>
