--- a/sner/server/templates/storage/service/addedit.html
+++ b/sner/server/templates/storage/service/addedit.html
@@ -17,6 +17,7 @@
 		{{ b_wtf.bootstrap_field(form.state, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.name, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.info, horizontal=True) }}
+		{{ b_wtf.bootstrap_field(form.comment, horizontal=True) }}
 		<div class="form-group">
 			<label class="col-sm-2 control-label"></label>
 			<div class="col-sm-10"><button class="btn-default btn" type="submit">Save</button></div>
