--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -99,6 +99,7 @@
 				<li><a href="{{ url_for('scheduler.job_list_route') }}">sch:Jobs</a></li>
 				<li><a href="{{ url_for('storage.host_list_route') }}">st:Hosts</a></li>
 				<li><a href="{{ url_for('storage.service_list_route') }}">st:Services</a></li>
+				<li><a href="{{ url_for('storage.vuln_list_route') }}">st:Vulns</a></li>
 				<li><a href="{{ url_for('storage.note_list_route') }}">st:Notes</a></li>
 				<li><a href="{{ url_for('storage.host_vizdns_route') }}">st:Hosts:vizdns</a></li>
 				<li><a href="{{ url_for('storage.service_vizports_route') }}">st:Services:vizports</a></li>
