--- a/sner/server/templates/storage/vuln/addedit.html
+++ b/sner/server/templates/storage/vuln/addedit.html
@@ -22,14 +22,17 @@
 		{{ b_wtf.bootstrap_field(form.severity, horizontal=True) }}
 		<div class="form-group">
 			{{ form.descr.label(class="col-sm-2 control-label") }}
-			<div class="col-sm-10">{{ form.descr(class="form-control", rows="10")|safe }}</div>
+			<div class="col-sm-10">{{ form.descr(class="form-control", rows="5")|safe }}</div>
 		</div>
 		<div class="form-group">
 			{{ form.data.label(class="col-sm-2 control-label") }}
-			<div class="col-sm-10">{{ form.data(class="form-control", rows="10")|safe }}</div>
+			<div class="col-sm-10">{{ form.data(class="form-control", rows="5")|safe }}</div>
 		</div>
 		{{ b_wtf.bootstrap_field(form.comment, horizontal=True) }}
-		{{ b_wtf.bootstrap_field(form.refs, horizontal=True) }}
+		<div class="form-group">
+			{{ form.refs.label(class="col-sm-2 control-label") }}
+			<div class="col-sm-10">{{ form.refs(class="form-control", rows="5")|safe }}</div>
+		</div>
 		<div class="form-group">
 			<label class="col-sm-2 control-label"></label>
 			<div class="col-sm-10"><button class="btn-default btn" type="submit">Save</button></div>
