--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
 	var datatable_ajax_custom = {
 		"ajax": {"url": "{{ url_for('storage.vuln_list_json_route') }}", "method": "POST"},
-		"columns": columns_with_buttons(["id", column("host", null), "service", "name", "xtype", column("severity", null), "comment", "refs"])
+		"columns": columns_with_buttons(["id", column("host", null), "service", "name", "xtype", column("severity", null), "comment", column("refs", null)])
 	};
 </script>
 {% endblock %}
