--- a/sner/server/templates/storage/note/addedit.html
+++ b/sner/server/templates/storage/note/addedit.html
@@ -12,7 +12,7 @@
 			<div class="col-sm-10"><p class="form-control-static">{{ host }}</p></div>
 		</div>
 		{{ b_wtf.bootstrap_field(form.host_id, horizontal=True) }}
-		{{ b_wtf.bootstrap_field(form.ntype, horizontal=True) }}
+		{{ b_wtf.bootstrap_field(form.xtype, horizontal=True) }}
 		<div class="form-group">
 			{{ form.data.label(class="col-sm-2 control-label") }}
 			<div class="col-sm-10">{{ form.data(class="form-control", rows="20")|safe }}</div>
