--- a/sner/server/templates/storage/note/addedit.html
+++ b/sner/server/templates/storage/note/addedit.html
@@ -12,6 +12,11 @@
 			<div class="col-sm-10"><p class="form-control-static">{{ host }}</p></div>
 		</div>
 		{{ b_wtf.bootstrap_field(form.host_id, horizontal=True) }}
+		<div class="form-group">
+			<label class="col-sm-2 control-label">Service</label>
+			<div class="col-sm-10"><p class="form-control-static">{{ service }}</p></div>
+		</div>
+		{{ b_wtf.bootstrap_field(form.service_id, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.xtype, horizontal=True) }}
 		<div class="form-group">
 			{{ form.data.label(class="col-sm-2 control-label") }}
