--- a/sner/server/templates/storage/vuln/pagepart-refs.html
+++ b/sner/server/templates/storage/vuln/pagepart-refs.html
@@ -1,3 +1,3 @@
-{%- for ref in refs -%}
+{%- for ref in vuln.refs|sort -%}
 <a href="{{ ref | url_for_ref }}">{{ ref | text_for_ref }}</a>
 {% endfor %}
