storage: dt columns refactoring
* all solumns are sent from the shared .json routes
* are hidden by the UI
* has less complex code on the controller side,i for the price of a some overhead on data prep and transfer

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -29,11 +29,10 @@
 
 	<script type="text/javascript">
 		/**
-		 * Create datatables column definition.
-		 * Optional renderfn defaults to non-html rendering; use null to enable direct html rendering.
+		 * Create datatables column definition. Defaults to non-html rendering.
 		 */
-		function column(d, renderfn = $.fn.dataTable.render.text()) {
-			return {"name": d, "title": d, "data": d, "render": renderfn};
+		function column(d, extra={}) {
+			return $.extend({"name": d, "title": d, "data": d, "render": $.fn.dataTable.render.text()}, extra);
 		}
 
 		/**
