--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
 	var datatable_ajax_custom = {
 		"ajax": {"url": "{{ url_for('storage.host_list_json_route') }}", "method": "POST"},
-		"columns": columns_with_buttons(["id", column("address", null), "hostname", "os", "nr_svcs", "nr_notes", "comment"])
+		"columns": columns_with_buttons(["id", column("address", {"render": null}), "hostname", "os", "nr_svcs", "nr_notes", "comment"])
 	};
 </script>
 {% endblock %}
