--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -39,7 +39,7 @@
 			<script type="text/javascript">
 				var datatable_host_services = {
 					"ajax": {"url": "{{ url_for('storage.service_list_json_route', host_id=host.id) }}", "method": "POST"},
-					"columns": columns_with_buttons(["id", "proto", "port", "name", "state", "info", "comment"]),
+					"columns": columns_with_buttons(["id", column("address", {"visible": false}), column("hostname", {"visible": false}), "proto", "port", "name", "state", "info", "comment"])
 				};
 				$(document).ready(function() {
 					$('#datatable_host_services').DataTable($.extend({}, datatable_ajax_options, datatable_host_services));
@@ -53,7 +53,7 @@
 			<script type="text/javascript">
 				var datatable_host_vulns = {
 					"ajax": {"url": "{{ url_for('storage.vuln_list_json_route', host_id=host.id) }}", "method": "POST"},
-					"columns": columns_with_buttons(["id", "service", column("name", null), "xtype", column("severity", null), column("refs", null), "comment"]),
+					"columns": columns_with_buttons(["id", column("address", {"visible": false}), column("hostname", {"visible": false}), "service", column("name", {"render": null}), "xtype", column("severity", {"render": null}), column("refs", {"render": null}), "comment"])
 				};
 				$(document).ready(function() {
 					$('#datatable_host_vulns').DataTable($.extend({}, datatable_ajax_options, datatable_host_vulns));
@@ -67,7 +67,7 @@
 			<script type="text/javascript">
 				var datatable_host_notes = {
 					"ajax": {"url": "{{ url_for('storage.note_list_json_route', host_id=host.id) }}", "method": "POST"},
-					"columns": columns_with_buttons([column("id",null), "service", "xtype", "data", "comment"]),
+					"columns": columns_with_buttons(["id", column("address", {"visible": false}), column("hostname", {"visible": false}), "service", "xtype", "data", "comment"])
 				};
 				$(document).ready(function() {
 					$('#datatable_host_notes').DataTable($.extend({}, datatable_ajax_options, datatable_host_notes));
