--- a/sner/server/templates/storage/service/list.html
+++ b/sner/server/templates/storage/service/list.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
 	var datatable_ajax_custom = {
 		"ajax": {"url": "{{ url_for('storage.service_list_json_route', **request.args) }}", "method": "POST"},
-		"columns": columns_with_buttons(["id", column("address", null), "hostname", "proto", "port", "name", "state", "info", "comment"])
+		"columns": columns_with_buttons(["id", column("address", {"render": null}), "hostname", "proto", "port", "name", "state", "info", "comment"])
 	};
 </script>
 {% endblock %}
