--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -53,7 +53,7 @@
 			<script type="text/javascript">
 				var datatable_host_vulns = {
 					"ajax": {"url": "{{ url_for('storage.vuln_list_json_route', host_id=host.id) }}", "method": "POST"},
-					"columns": columns_with_buttons(["id", column("address", {"visible": false}), column("hostname", {"visible": false}), "service", column("name", {"render": null}), "xtype", column("severity", {"render": null}), column("refs", {"render": null}), "comment"])
+					"columns": columns_with_buttons(["id", column("address", {"visible": false}), column("hostname", {"visible": false}), "service", column("name", {"render": null}), "xtype", column("severity", {"render": null}), column("refs", {"render": null}), "tags", "comment"])
 				};
 				$(document).ready(function() {
 					$('#datatable_host_vulns').DataTable($.extend({}, datatable_ajax_options, datatable_host_vulns));
