--- a/sner/server/templates/storage/vuln/addedit.html
+++ b/sner/server/templates/storage/vuln/addedit.html
@@ -32,6 +32,10 @@
 			{{ form.refs.label(class="col-sm-2 control-label") }}
 			<div class="col-sm-10">{{ form.refs(class="form-control", rows="5")|safe }}</div>
 		</div>
+		<div class="form-group">
+			{{ form.tags.label(class="col-sm-2 control-label") }}
+			<div class="col-sm-10">{{ form.tags(class="form-control tageditor") }}</div>
+		</div>
 		{{ b_wtf.bootstrap_field(form.comment, horizontal=True) }}
 		<div class="form-group">
 			<label class="col-sm-2 control-label"></label>
